Fixed single spot image box overflow

--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -61,7 +61,7 @@
     /* border: 1px solid red; */
     width: 50%;
     max-height: 500px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .bigImg img {
@@ -74,12 +74,13 @@
     max-width: 50%;
     max-height: 500px;
     margin-left: 4px;
+    overflow: auto;
 }
 
 .imgBox img {
     /* border: 1px solid red; */
-    width: 48%;
-    height: 48%;
+    max-width: 48%;
+    max-height: 48%;
     object-fit: fill;
     /* margin: 1px 0px 3px 5px; */
     margin: 2px 4px;
